--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ header .toggle img
 	width: 100%;
 	min-height: 100vh;
 	padding: 0 100px;
-	background: url(img/bg.jpg);
+	background: url(../img/bg.jpg);
 	background-position: center;
 	background-size: cover;
 	display: flex;
@@ -117,7 +117,7 @@ header .toggle img
 	left: calc(50% - 250px / 2);
 	width: 250px;
 	height: 150px;
-	background: url(img/joker.png);
+	background: url(../img/joker.png);
 	background-size: cover;
 	cursor: pointer;
 	animation: animate 25s linear infinite;
